--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"/>
-  <title>Nushin Alishahi| UI & Graphic designer</title>
-  <meta name="description" content="Disegnare l'interfaccia delle applicazioni su tablet o smartphone, dal wireframe alle schermate definitive, creare l'immagine coordinata dell'azienda e preparare le brochure informative sono le mie competenze principali." />
+  <title>Nushin Alishahi| UX/UI & Graphic designer</title>
+  <meta name="description" content="Disegnare interfaccia delle applicazioni su tablet o smartphone, prototyping da wireframe a schermate definitive, creare l'immagine coordinata dell'azienda e preparare le brochure informative sono le mie competenze principali." />
 
   <!-- facebook graph -->
   <meta property="og:url"  content="http://nushina.github.io/sito-bnr/index.html" /> 
@@ -227,6 +227,18 @@
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
   <script src="js/materialize.js"></script>
   <script src="js/init.js"></script>
+
+  <!-- Google Analytics-->
+  <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-97843713-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
 
   </body>
 </html>
