--- a/index.html
+++ b/index.html
@@ -37,14 +37,14 @@
         <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
        <div class="container">
         	<ul class="right hide-on-med-and-down">
-       			<li><a href="#lavori">Progetti</a></li>
-          		<li><a href="#registrazione">Biografia</a></li>
+       			<li><a href="https://www.behance.net/nushinz">Progetti</a></li>
+          		<li><a href="https://www.linkedin.com/in/nushin-alishahi-6471b840/">Biografia</a></li>
           		<li><a href="#footer">Contattami</a></li>
         	</ul>
        </div>
         <ul class="side-nav" id="mobile-demo">
-          <li><a href="#lavori">Progetti</a></li>
-          <li><a href="#registrazione">Biografia</a></li>
+          <li><a href="https://www.behance.net/nushinz">Progetti</a></li>
+          <li><a href="https://www.linkedin.com/in/nushin-alishahi-6471b840/">Biografia</a></li>
           <li><a href="#footer">Conttatami</li>
 		    </ul>
         <form>
@@ -68,7 +68,7 @@
         <br><br>
         <h1 class="header center white-text">Nushin Alishahi</h1>
         <div class="row center">
-          <h5 class="header-subtitle col s12 light white-text">Disegnare l'interfaccia delle applicazioni su tablet e smartphone, dal wireframe alle schermate definitive, creare l'immagine coordinata dell'azienda e preparare le brochure e infografiche sono le mie competenze principali.</h5>
+          <h5 class="header-subtitle col s12 light white-text">Le mie competenze principali includono disegnare interfacce per applicazioni su tablet e smartphone, dal wireframe alle schermate definitive, creare l'immagine coordinata aziendale, preparare brochure e infografiche!</h5>
         </div>
         <div class="row center">
           <a href="mailto:nushin86@gmail.com" class="btn-large waves-effect waves-light black white-text">CHIEDI UN PREVENTIVO</a>
@@ -84,9 +84,9 @@
         <div class="col s12">
 		<div class="row valign-wrapper">
             <div class="col s6">
-             <h5 class="feature">UI design</h5>
+             <h5 class="feature">UX/UI design</h5>
                <p class="feature grey-text">
-                Vedo un applicazione come spazio dove gli utenti ci vivono magari per pochi secondi, ma il mio lavoro è fargli sentire accolto e comodo.
+                Vedo un applicazione come spazio dove gli utenti ci vivono magari per pochi secondi, ma il mio lavoro è fargli sentire accolti e comodi.
                </p>
             </div>
           <div class="col s6">
