--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             <div class="col s6">
              <h5 class="feature">UX/UI design</h5>
                <p class="feature grey-text">
-                Vedo un applicazione come spazio dove gli utenti ci vivono magari per pochi secondi, ma il mio lavoro è fargli sentire accolti e comodi.
+                Vedo un'applicazione come spazio dove gli utenti possano viverci anche solo per pochi secondi, ma il mio lavoro è fargli sentire accolti e comodi.
                </p>
             </div>
           <div class="col s6">
@@ -130,8 +130,8 @@
     <div class="section-intro no-pad-bot">
       <div class="container">
         <div class="header row center">
-          <h4 class="col s12 grey-text text-darken-3">La passione è la guida mentre guardo con gli occhi assettati il mondo attorno a me!</h4>
-          <h5 class="grey-text text-darken-2" >Sono sempre curiosa di sapere il tuo parere o le tue esigenze!</h5>
+          <h4 class="col s12 grey-text text-darken-3">Mi guida la passione mentre guardo il mondo con gli occhi curiosi!</h4>
+          <h5 class="grey-text text-darken-2" >Sono sempre interessata al tuo parere o le tue domande!</h5>
             <a class="btn-large waves-effect waves-light black">Scrivimi</a>
         </div>
       </div>
@@ -152,7 +152,7 @@
 	            <h2 class="center blue-text text-accent-3"><i class="material-icons">stars</i></h2>
 	            <h5 class="center">Professionale</h5>
 
-	            <p class="center grey-text text-darken-1 light">Con tre anni di esperienza nell'ambito di grafica e sviluppo applicazioni, potrei affermare le mie competenze per disegnare le interfacce complesse, soprattutto applicazioni finanziari e Analytics. 
+	            <p class="center grey-text text-darken-1 light">Con quattro anni di esperienza nell'ambito di grafica e progettazioni app, potrei affermare le mie competenze per disegnare le interfacce complesse, soprattutto applicazioni finanziari e Analytics. 
 	            </p>
 	          </div>
 	        </div>
@@ -171,7 +171,7 @@
 	            <h2 class="center yellow-text text-darken-2"><i class="material-icons">schedule</i></h2>
 	            <h5 class="center">Rapida</h5>
 
-	            <p class="center grey-text text-darken-1 light">La cosa più preziosa che abbiamo tutti a disposizione è il tempo. Io cerco di sfruttarlo completamente in modo tale di consegnare i progetti in anticipo. Con tanta cura e passione. </p>
+	            <p class="center grey-text text-darken-1 light">La cosa più preziosa che abbiamo tutti a disposizione è il tempo. Io cerco di sfruttarlo completamente in modo tale da consegnare i progetti in anticipo. Con tanta cura e passione. </p>
 	          </div>
 	        </div>
 	      </div>
@@ -197,7 +197,7 @@
       <div class="row">
         <div class="col l6 s12">
           <h5 class="white-text">Nushin Alishahi</h5>
-          <p class="grey-text text-lighten-4">Sono sempre nella ricerca della novità e le nuove tendenze</p>
+          <p class="grey-text text-lighten-4">Sono sempre alla ricerca di novità e nuove tendenze</p>
 		</div>
         
         <div class="col l4 offset-l2 s12">
